--- a/Lava Fall/Lava Fall/frmGioco.resx
+++ b/Lava Fall/Lava Fall/frmGioco.resx
@@ -123,4 +123,7 @@
   <metadata name="punteggio.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>121, 17</value>
   </metadata>
+  <metadata name="spostamento_basi.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>229, 17</value>
+  </metadata>
 </root>
