--- a/Lava Fall/Lava Fall/frmGioco.resx
+++ b/Lava Fall/Lava Fall/frmGioco.resx
@@ -129,4 +129,7 @@
   <metadata name="countDown.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>378, 17</value>
   </metadata>
+  <metadata name="spostamento_pg.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>492, 17</value>
+  </metadata>
 </root>
